# stack-sync

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  install  install.sh  justfile  ssh-mode.md
.github/templates/: homebrew-formula.rb
.github/workflows/: build.yml  release.yml
docs/: portainer-api.yaml
src/: commands.rs  config.rs  main.rs  portainer.rs  reporter.rs  ssh.rs  stacks.rs  styles.rs  update.rs
src/commands/: diff.rs  import.rs  init.rs  redeploy.rs  sync.rs  view.rs
