[package]
name = "stack-sync"
version = "0.3.2"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
ureq = { version = "3", features = ["json"] }
self-replace = "1"
flate2 = "1"
tar = "0.4"

[profile.release]
strip = true
lto = true
