[package]
name = "stack-sync"
version = "0.3.6"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
ureq = { version = "3", features = ["json"] }
self-replace = "1"
flate2 = "1"
tar = "0.4"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
console = "0.16.2"

[profile.release]
strip = true
lto = true
